# christian-history-graphRAG

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
queries/: discover_christian_history_entities.sparql
src/christian_history_graphrag/: __init__.py  checkpoints.py  claims.py  cli.py  communities.py  config.py  constants.py  entity_resolution.py  http_utils.py  ingest.py  kg_builder.py  llm_json.py  local_embeddings.py  logging_utils.py  models.py  neo4j_store.py  providers.py  rag.py  reranking.py  routing.py  wikidata.py  wikipedia.py
